Fix testimonials profile to align at bottom of div

--- a/assets/css/components/testimonials.css
+++ b/assets/css/components/testimonials.css
@@ -1,24 +1,27 @@
 .c-testimonial {
-  margin: 0 5px;
-  background: $neutral-lightest-color;
-  padding: 20px;
+    margin: 0 5px;
+    background: $neutral-lightest-color;
+    padding: 20px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
 }
 
 .c-testimonial__text {
-    padding-bottom: 30px
+    padding-bottom: 30px;
 }
 
 .c-testimonial__icon {
-  color: $primary-color;
-  font-size: 30px;
-  float: left;
-  width: 20%; 
+    color: $primary-color;
+    font-size: 30px;
+    float: left;
+    width: 20%;
 }
 
 .c-testimonial__profile {
-  float: right;
-  width: 80%;
-  text-align: right;
+    float: right;
+    width: 80%;
+    text-align: right;
 }
 
 .c-testimonial__avatar {
@@ -42,6 +45,10 @@
     font-size: 12px
 }
 
+.c-testimonial__details {
+    margin-top: auto;
+}
+
 .section-bg--image {
     height: 380px;
     position: relative;
@@ -49,8 +56,8 @@
     /* background: url('https://images.unsplash.com/photo-1489641229532-40b71456e310?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1491&q=80'); */
     /* background: url('https://images.unsplash.com/photo-1480951921287-2ecdd81efbc2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80'); */
     background: url('https://images.unsplash.com/photo-1496309838698-63bfac391248?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80');
-}
+    }
 
-.section-bg--pattern {
+    .section-bg--pattern {
     background: url("https://www.toptal.com/designers/subtlepatterns/patterns/seigaiha.png")
-}
+    }
